<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.embrapa.app.Activity_Main" >

    <item
        android:id="@+id/action_pesquisar"
        android:title="@string/action_pesquisar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_enviar_praga"
        android:orderInCategory="100"
        android:title="@string/action_enviar_praga"
        android:icon="@drawable/ic_send_b"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
	<item
        android:id="@+id/action_sair"
        android:orderInCategory="100"
        android:title="@string/action_sair"
        app:showAsAction="never"/>
</menu>
