<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/actionbar_custom"/>
    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:padding="14dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etNome"
                android:hint="seu nome aqui"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etEmail"
                android:hint="example@example.com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etDescricao"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:hint="@string/descricao_enviarpraga"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.0"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.5"
                    android:background="@xml/estilo_imageview"
                    android:contentDescription="TODO"
                    android:onClick="selecionarFoto1"
                    android:src="@drawable/ic_add_photo"
                    android:tag="0" />
                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="250dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:background="@xml/estilo_imageview"
                    android:src="@drawable/ic_add_photo"
                    android:onClick="selecionarFoto2"
                    android:tag="1"/>
            </LinearLayout>

            <Button
                android:id="@+id/btEnviar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enviar"
                android:textStyle="bold"
                android:onClick="enviar" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>